--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.6.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
